# url-shortener

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.en.md  README.md  askama.toml  deploy.sh  rustfmt.toml
.github/workflows/: deploy.yml
migrations/: 20241228000000_create_urls_table.sql  20241228000001_add_unique_constraint_and_partial_index.sql  20241228000002_extend_random_key_length.sql
src/: error.rs  lib.rs  main.rs
src/api/: handlers.rs  middlewares.rs  mod.rs  routes.rs  schemas.rs  state.rs
src/config/: cache.rs  db.rs  env.rs  mod.rs
src/models/: mod.rs  url.rs
src/utils/: jwt.rs  mod.rs  rand.rs  short_key.rs
tests/: integration_test.rs
views/: index.html  redirect.html
